--- a/src/2-form.html
+++ b/src/2-form.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/2-form.css" />
 
     <script src="./js/2-form.js" type="module" defer></script>
   </head>
