fix after check

--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="./css/styles.css" />
 
-    <script src="./css/1-gallery.css" type="module" defer></script>
+    <script src="./js/1-gallery.js" type="module" defer></script>
   </head>
   <body>
     <main>
